Fix border spacing on HTML table QRCode

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,10 @@
  *= require_self
  */
 
+table {
+  border-spacing: 0;
+}
+
 td.black {
   background-color: black;
 }
